// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExecutionDetailsPane matches snapshot no init tab 1`] = `
<Memo(FancyTabPane)
  activeTab="general"
  className="execution-details-pane"
  onActivateTab={[Function]}
  tabs={
    Array [
      Object {
        "icon": "many-to-one",
        "id": "general",
        "label": "General",
      },
      Object {
        "icon": "application",
        "id": "sql",
        "label": "SQL query",
      },
      Object {
        "icon": "cog",
        "id": "native",
        "label": "Native query",
      },
      undefined,
      undefined,
      Object {
        "icon": "error",
        "id": "error",
        "label": "Error",
      },
      Object {
        "icon": "warning-sign",
        "id": "warnings",
        "label": "Warnings",
      },
    ]
  }
>
  <div>
    <p>
      General info for query-af8a263d-213f-418e-ad8d-37d55beff59b ingesting into "kttm-blank-lines"
    </p>
    <p>
      Results written to dataSource
    </p>
    <Memo(ExecutionErrorPane)
      execution={
        Execution {
          "_payload": Object {
            "payload": Object {
              "context": Object {
                "forceTimeChunkLock": true,
                "useLineageBasedSegmentAllocation": true,
              },
              "dataSource": "kttm-blank-lines",
              "groupId": "query-af8a263d-213f-418e-ad8d-37d55beff59b",
              "id": "query-af8a263d-213f-418e-ad8d-37d55beff59b",
              "nativeTypeNames": Array [
                "LONG",
                "STRING",
              ],
              "resource": Object {
                "availabilityGroup": "query-af8a263d-213f-418e-ad8d-37d55beff59b",
                "requiredCapacity": 1,
              },
              "spec": Object {
                "assignmentStrategy": "max",
                "columnMappings": Array [
                  Object {
                    "outputColumn": "__time",
                    "queryColumn": "v0",
                  },
                  Object {
                    "outputColumn": "agent_type",
                    "queryColumn": "agent_type",
                  },
                ],
                "destination": Object {
                  "dataSource": "kttm-blank-lines",
                  "replaceTimeChunks": Array [
                    "-146136543-09-08T08:23:32.096Z/146140482-04-24T15:36:27.903Z",
                  ],
                  "segmentGranularity": "DAY",
                  "type": "dataSource",
                },
                "query": Object {
                  "columns": Array [
                    "agent_type",
                    "v0",
                  ],
                  "context": Object {
                    "__user": "allowAll",
                    "executionMode": "async",
                    "finalize": false,
                    "finalizeAggregations": false,
                    "groupByEnableMultiValueUnnesting": false,
                    "maxNumTasks": 2,
                    "maxParseExceptions": 2,
                    "queryId": "af8a263d-213f-418e-ad8d-37d55beff59b",
                    "scanSignature": "[{\\"name\\":\\"agent_type\\",\\"type\\":\\"STRING\\"},{\\"name\\":\\"v0\\",\\"type\\":\\"LONG\\"}]",
                    "sqlInsertSegmentGranularity": "\\"DAY\\"",
                    "sqlQueryId": "af8a263d-213f-418e-ad8d-37d55beff59b",
                    "sqlReplaceTimeChunks": "all",
                  },
                  "dataSource": Object {
                    "inputFormat": Object {
                      "assumeNewlineDelimited": false,
                      "keepNullColumns": false,
                      "type": "json",
                      "useJsonNodeReader": false,
                    },
                    "inputSource": Object {
                      "type": "http",
                      "uris": Array [
                        "https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json",
                      ],
                    },
                    "signature": Array [
                      Object {
                        "name": "timestamp",
                        "type": "STRING",
                      },
                      Object {
                        "name": "agent_type",
                        "type": "STRING",
                      },
                    ],
                    "type": "external",
                  },
                  "granularity": Object {
                    "type": "all",
                  },
                  "intervals": Object {
                    "intervals": Array [
                      "-146136543-09-08T08:23:32.096Z/146140482-04-24T15:36:27.903Z",
                    ],
                    "type": "intervals",
                  },
                  "legacy": false,
                  "queryType": "scan",
                  "resultFormat": "compactedList",
                  "virtualColumns": Array [
                    Object {
                      "expression": "timestamp_parse(\\"timestamp\\",null,'UTC')",
                      "name": "v0",
                      "outputType": "LONG",
                      "type": "expression",
                    },
                  ],
                },
                "tuningConfig": Object {
                  "maxNumWorkers": 1,
                  "maxRowsInMemory": 100000,
                  "rowsPerSegment": 3000000,
                },
              },
              "sqlQuery": "REPLACE INTO \\"kttm-blank-lines\\" OVERWRITE ALL
SELECT
  TIME_PARSE(\\"timestamp\\") AS \\"__time\\",
  \\"agent_type\\"
FROM TABLE(
  EXTERN(
    '{\\"type\\":\\"http\\",\\"uris\\":[\\"https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json\\"]}',
    '{\\"type\\":\\"json\\"}'
  )
) EXTEND (\\"timestamp\\" VARCHAR, \\"agent_type\\" VARCHAR)
PARTITIONED BY DAY",
              "sqlQueryContext": Object {
                "executionMode": "async",
                "finalizeAggregations": false,
                "groupByEnableMultiValueUnnesting": false,
                "maxNumTasks": 2,
                "maxParseExceptions": 2,
                "queryId": "af8a263d-213f-418e-ad8d-37d55beff59b",
                "sqlInsertSegmentGranularity": "\\"DAY\\"",
                "sqlQueryId": "af8a263d-213f-418e-ad8d-37d55beff59b",
                "sqlReplaceTimeChunks": "all",
              },
              "sqlResultsContext": Object {
                "serializeComplexValues": true,
                "stringifyArrays": true,
                "timeZone": "UTC",
              },
              "sqlTypeNames": Array [
                "TIMESTAMP",
                "VARCHAR",
              ],
              "type": "query_controller",
            },
            "task": "query-af8a263d-213f-418e-ad8d-37d55beff59b",
          },
          "capacityInfo": undefined,
          "destination": Object {
            "dataSource": "kttm-blank-lines",
            "replaceTimeChunks": Array [
              "-146136543-09-08T08:23:32.096Z/146140482-04-24T15:36:27.903Z",
            ],
            "segmentGranularity": "DAY",
            "type": "dataSource",
          },
          "destinationPages": undefined,
          "duration": 14545,
          "engine": "sql-msq-task",
          "error": Object {
            "error": Object {
              "errorCode": "TooManyWarnings",
              "errorMessage": "Too many warnings of type CannotParseExternalData generated (max = 2)",
              "maxWarnings": 2,
              "rootErrorCode": "CannotParseExternalData",
            },
            "host": "localhost",
            "taskId": "query-af8a263d-213f-418e-ad8d-37d55beff59b-worker0_0",
          },
          "id": "query-af8a263d-213f-418e-ad8d-37d55beff59b",
          "nativeQuery": Object {
            "columns": Array [
              "agent_type",
              "v0",
            ],
            "context": Object {
              "__user": "allowAll",
              "executionMode": "async",
              "finalize": false,
              "finalizeAggregations": false,
              "groupByEnableMultiValueUnnesting": false,
              "maxNumTasks": 2,
              "maxParseExceptions": 2,
              "queryId": "af8a263d-213f-418e-ad8d-37d55beff59b",
              "scanSignature": "[{\\"name\\":\\"agent_type\\",\\"type\\":\\"STRING\\"},{\\"name\\":\\"v0\\",\\"type\\":\\"LONG\\"}]",
              "sqlInsertSegmentGranularity": "\\"DAY\\"",
              "sqlQueryId": "af8a263d-213f-418e-ad8d-37d55beff59b",
              "sqlReplaceTimeChunks": "all",
            },
            "dataSource": Object {
              "inputFormat": Object {
                "assumeNewlineDelimited": false,
                "keepNullColumns": false,
                "type": "json",
                "useJsonNodeReader": false,
              },
              "inputSource": Object {
                "type": "http",
                "uris": Array [
                  "https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json",
                ],
              },
              "signature": Array [
                Object {
                  "name": "timestamp",
                  "type": "STRING",
                },
                Object {
                  "name": "agent_type",
                  "type": "STRING",
                },
              ],
              "type": "external",
            },
            "granularity": Object {
              "type": "all",
            },
            "intervals": Object {
              "intervals": Array [
                "-146136543-09-08T08:23:32.096Z/146140482-04-24T15:36:27.903Z",
              ],
              "type": "intervals",
            },
            "legacy": false,
            "queryType": "scan",
            "resultFormat": "compactedList",
            "virtualColumns": Array [
              Object {
                "expression": "timestamp_parse(\\"timestamp\\",null,'UTC')",
                "name": "v0",
                "outputType": "LONG",
                "type": "expression",
              },
            ],
          },
          "queryContext": Object {
            "executionMode": "async",
            "finalizeAggregations": false,
            "groupByEnableMultiValueUnnesting": false,
            "maxNumTasks": 2,
            "maxParseExceptions": 2,
          },
          "result": undefined,
          "sqlQuery": "REPLACE INTO \\"kttm-blank-lines\\" OVERWRITE ALL
SELECT
  TIME_PARSE(\\"timestamp\\") AS \\"__time\\",
  \\"agent_type\\"
FROM TABLE(
  EXTERN(
    '{\\"type\\":\\"http\\",\\"uris\\":[\\"https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json\\"]}',
    '{\\"type\\":\\"json\\"}'
  )
) EXTEND (\\"timestamp\\" VARCHAR, \\"agent_type\\" VARCHAR)
PARTITIONED BY DAY",
          "stages": Stages {
            "counters": Object {
              "0": Object {
                "0": Object {
                  "input0": Object {
                    "bytes": Array [
                      7658,
                    ],
                    "files": Array [
                      1,
                    ],
                    "rows": Array [
                      10,
                    ],
                    "totalFiles": Array [
                      1,
                    ],
                    "type": "channel",
                  },
                  "output": Object {
                    "bytes": Array [
                      712,
                    ],
                    "frames": Array [
                      1,
                    ],
                    "rows": Array [
                      10,
                    ],
                    "type": "channel",
                  },
                  "sortProgress": Object {
                    "levelToMergedBatches": Object {},
                    "levelToTotalBatches": Object {
                      "0": 1,
                      "1": 1,
                      "2": -1,
                    },
                    "progressDigest": 0,
                    "totalMergersForUltimateLevel": -1,
                    "totalMergingLevels": 3,
                    "type": "sortProgress",
                  },
                  "warnings": Object {
                    "CannotParseExternalData": 3,
                    "type": "warnings",
                  },
                },
              },
            },
            "stages": Array [
              Object {
                "definition": Object {
                  "id": "f635e36d-6b90-4b74-ad5e-a179c99f0ddc_0",
                  "input": Array [
                    Object {
                      "inputFormat": Object {
                        "assumeNewlineDelimited": false,
                        "keepNullColumns": false,
                        "type": "json",
                        "useJsonNodeReader": false,
                      },
                      "inputSource": Object {
                        "type": "http",
                        "uris": Array [
                          "https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json",
                        ],
                      },
                      "signature": Array [
                        Object {
                          "name": "timestamp",
                          "type": "STRING",
                        },
                        Object {
                          "name": "agent_type",
                          "type": "STRING",
                        },
                      ],
                      "type": "external",
                    },
                  ],
                  "maxWorkerCount": 1,
                  "processor": Object {
                    "query": Object {
                      "columns": Array [
                        "agent_type",
                        "v0",
                      ],
                      "context": Object {
                        "__timeColumn": "v0",
                        "__user": "allowAll",
                        "executionMode": "async",
                        "finalize": false,
                        "finalizeAggregations": false,
                        "groupByEnableMultiValueUnnesting": false,
                        "maxNumTasks": 2,
                        "maxParseExceptions": 2,
                        "queryId": "af8a263d-213f-418e-ad8d-37d55beff59b",
                        "scanSignature": "[{\\"name\\":\\"agent_type\\",\\"type\\":\\"STRING\\"},{\\"name\\":\\"v0\\",\\"type\\":\\"LONG\\"}]",
                        "sqlInsertSegmentGranularity": "\\"DAY\\"",
                        "sqlQueryId": "af8a263d-213f-418e-ad8d-37d55beff59b",
                        "sqlReplaceTimeChunks": "all",
                      },
                      "dataSource": Object {
                        "inputFormat": Object {
                          "assumeNewlineDelimited": false,
                          "keepNullColumns": false,
                          "type": "json",
                          "useJsonNodeReader": false,
                        },
                        "inputSource": Object {
                          "type": "http",
                          "uris": Array [
                            "https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json",
                          ],
                        },
                        "signature": Array [
                          Object {
                            "name": "timestamp",
                            "type": "STRING",
                          },
                          Object {
                            "name": "agent_type",
                            "type": "STRING",
                          },
                        ],
                        "type": "external",
                      },
                      "granularity": Object {
                        "type": "all",
                      },
                      "intervals": Object {
                        "intervals": Array [
                          "-146136543-09-08T08:23:32.096Z/146140482-04-24T15:36:27.903Z",
                        ],
                        "type": "intervals",
                      },
                      "legacy": false,
                      "queryType": "scan",
                      "resultFormat": "compactedList",
                      "virtualColumns": Array [
                        Object {
                          "expression": "timestamp_parse(\\"timestamp\\",null,'UTC')",
                          "name": "v0",
                          "outputType": "LONG",
                          "type": "expression",
                        },
                      ],
                    },
                    "type": "scan",
                  },
                  "shuffleCheckHasMultipleValues": true,
                  "shuffleSpec": Object {
                    "clusterBy": Object {
                      "bucketByCount": 1,
                      "columns": Array [
                        Object {
                          "columnName": "__bucket",
                          "order": "ASCENDING",
                        },
                        Object {
                          "columnName": "__boost",
                          "order": "ASCENDING",
                        },
                      ],
                    },
                    "targetSize": 3000000,
                    "type": "targetSize",
                  },
                  "signature": Array [
                    Object {
                      "name": "__bucket",
                      "type": "LONG",
                    },
                    Object {
                      "name": "__boost",
                      "type": "LONG",
                    },
                    Object {
                      "name": "agent_type",
                      "type": "STRING",
                    },
                    Object {
                      "name": "v0",
                      "type": "LONG",
                    },
                  ],
                },
                "duration": 14193,
                "phase": "FAILED",
                "sort": true,
                "stageNumber": 0,
                "startTime": "2023-08-01T04:20:25.296Z",
                "workerCount": 1,
              },
              Object {
                "definition": Object {
                  "id": "f635e36d-6b90-4b74-ad5e-a179c99f0ddc_1",
                  "input": Array [
                    Object {
                      "stage": 0,
                      "type": "stage",
                    },
                  ],
                  "maxWorkerCount": 1,
                  "processor": Object {
                    "columnMappings": Array [
                      Object {
                        "outputColumn": "__time",
                        "queryColumn": "v0",
                      },
                      Object {
                        "outputColumn": "agent_type",
                        "queryColumn": "agent_type",
                      },
                    ],
                    "dataSchema": Object {
                      "dataSource": "kttm-blank-lines",
                      "dimensionsSpec": Object {
                        "dimensionExclusions": Array [
                          "__time",
                        ],
                        "dimensions": Array [
                          Object {
                            "createBitmapIndex": true,
                            "multiValueHandling": "SORTED_ARRAY",
                            "name": "agent_type",
                            "type": "string",
                          },
                        ],
                        "includeAllDimensions": false,
                        "useSchemaDiscovery": false,
                      },
                      "granularitySpec": Object {
                        "intervals": Array [
                          "-146136543-09-08T08:23:32.096Z/146140482-04-24T15:36:27.903Z",
                        ],
                        "queryGranularity": Object {
                          "type": "none",
                        },
                        "rollup": false,
                        "type": "arbitrary",
                      },
                      "metricsSpec": Array [],
                      "timestampSpec": Object {
                        "column": "__time",
                        "format": "millis",
                        "missingValue": null,
                      },
                      "transformSpec": Object {
                        "filter": null,
                        "transforms": Array [],
                      },
                    },
                    "tuningConfig": Object {
                      "maxNumWorkers": 1,
                      "maxRowsInMemory": 100000,
                      "rowsPerSegment": 3000000,
                    },
                    "type": "segmentGenerator",
                  },
                  "signature": Array [],
                },
                "stageNumber": 1,
              },
            ],
          },
          "startTime": 2023-08-01T04:20:24.945Z,
          "status": "FAILED",
          "usageInfo": Object {
            "pendingTasks": 0,
            "runningTasks": 2,
          },
          "warnings": Array [
            Object {
              "error": Object {
                "errorCode": "CannotParseExternalData",
                "errorMessage": "Unable to parse row [] (Path: https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json, Record: 3, Line: 3)",
              },
              "exceptionStackTrace": "org.apache.druid.java.util.common.parsers.ParseException: Unable to parse row [] (Path: https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json, Record: 3, Line: 3)
	at org.apache.druid.data.input.IntermediateRowParsingReader$1.hasNext(IntermediateRowParsingReader.java:79)
	at org.apache.druid.java.util.common.parsers.CloseableIterator$2.findNextIteratorIfNecessary(CloseableIterator.java:74)
	at org.apache.druid.java.util.common.parsers.CloseableIterator$2.next(CloseableIterator.java:108)
	at org.apache.druid.java.util.common.parsers.CloseableIterator$1.next(CloseableIterator.java:52)
	at org.apache.druid.msq.input.external.ExternalSegment$1$1.hasNext(ExternalSegment.java:95)
	at org.apache.druid.java.util.common.guava.BaseSequence$1.next(BaseSequence.java:115)
	at org.apache.druid.segment.RowWalker.advance(RowWalker.java:70)
	at org.apache.druid.segment.RowBasedCursor.advanceUninterruptibly(RowBasedCursor.java:110)
	at org.apache.druid.segment.RowBasedCursor.advance(RowBasedCursor.java:103)
	at org.apache.druid.msq.querykit.scan.ScanQueryFrameProcessor.populateFrameWriterAndFlushIfNeeded(ScanQueryFrameProcessor.java:275)
	at org.apache.druid.msq.querykit.scan.ScanQueryFrameProcessor.populateFrameWriterAndFlushIfNeededWithExceptionHandling(ScanQueryFrameProcessor.java:242)
	at org.apache.druid.msq.querykit.scan.ScanQueryFrameProcessor.runWithSegment(ScanQueryFrameProcessor.java:181)
	at org.apache.druid.msq.querykit.BaseLeafFrameProcessor.runIncrementally(BaseLeafFrameProcessor.java:159)
	at org.apache.druid.msq.querykit.scan.ScanQueryFrameProcessor.runIncrementally(ScanQueryFrameProcessor.java:146)
	at org.apache.druid.frame.processor.FrameProcessors$1FrameProcessorWithBaggage.runIncrementally(FrameProcessors.java:75)
	at org.apache.druid.frame.processor.FrameProcessorExecutor$1ExecutorRunnable.runProcessorNow(FrameProcessorExecutor.java:229)
	at org.apache.druid.frame.processor.FrameProcessorExecutor$1ExecutorRunnable.run(FrameProcessorExecutor.java:137)
	at org.apache.druid.msq.exec.WorkerImpl$1$2.run(WorkerImpl.java:837)
	at java.base/java.util.concurrent.Executors$RunnableAdapter.call(Executors.java:515)
	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
	at org.apache.druid.query.PrioritizedListenableFutureTask.run(PrioritizedExecutorService.java:251)
	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1128)
	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:628)
	at java.base/java.lang.Thread.run(Thread.java:829)
Caused by: com.fasterxml.jackson.databind.exc.MismatchedInputException: No content to map due to end-of-input
 at [Source: (String)\\"\\"; line: 1, column: 0]
	at com.fasterxml.jackson.databind.exc.MismatchedInputException.from(MismatchedInputException.java:59)
	at com.fasterxml.jackson.databind.ObjectMapper._initForReading(ObjectMapper.java:4360)
	at com.fasterxml.jackson.databind.ObjectMapper._readMapAndClose(ObjectMapper.java:4205)
	at com.fasterxml.jackson.databind.ObjectMapper.readValue(ObjectMapper.java:3214)
	at com.fasterxml.jackson.databind.ObjectMapper.readValue(ObjectMapper.java:3182)
	at org.apache.druid.data.input.impl.JsonLineReader.parseInputRows(JsonLineReader.java:75)
	at org.apache.druid.data.input.impl.JsonLineReader.parseInputRows(JsonLineReader.java:48)
	at org.apache.druid.data.input.IntermediateRowParsingReader$1.hasNext(IntermediateRowParsingReader.java:71)
	... 23 more
",
              "host": "localhost:8101",
              "stageNumber": 0,
              "taskId": "query-af8a263d-213f-418e-ad8d-37d55beff59b-worker0_0",
            },
            Object {
              "error": Object {
                "errorCode": "CannotParseExternalData",
                "errorMessage": "Unable to parse row [] (Path: https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json, Record: 6, Line: 7)",
              },
              "exceptionStackTrace": "org.apache.druid.java.util.common.parsers.ParseException: Unable to parse row [] (Path: https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json, Record: 6, Line: 7)
	at org.apache.druid.data.input.IntermediateRowParsingReader$1.hasNext(IntermediateRowParsingReader.java:79)
	at org.apache.druid.java.util.common.parsers.CloseableIterator$2.findNextIteratorIfNecessary(CloseableIterator.java:74)
	at org.apache.druid.java.util.common.parsers.CloseableIterator$2.next(CloseableIterator.java:108)
	at org.apache.druid.java.util.common.parsers.CloseableIterator$1.next(CloseableIterator.java:52)
	at org.apache.druid.msq.input.external.ExternalSegment$1$1.hasNext(ExternalSegment.java:95)
	at org.apache.druid.java.util.common.guava.BaseSequence$1.next(BaseSequence.java:115)
	at org.apache.druid.segment.RowWalker.advance(RowWalker.java:70)
	at org.apache.druid.segment.RowBasedCursor.advanceUninterruptibly(RowBasedCursor.java:110)
	at org.apache.druid.segment.RowBasedCursor.advance(RowBasedCursor.java:103)
	at org.apache.druid.msq.querykit.scan.ScanQueryFrameProcessor.populateFrameWriterAndFlushIfNeeded(ScanQueryFrameProcessor.java:275)
	at org.apache.druid.msq.querykit.scan.ScanQueryFrameProcessor.populateFrameWriterAndFlushIfNeededWithExceptionHandling(ScanQueryFrameProcessor.java:242)
	at org.apache.druid.msq.querykit.scan.ScanQueryFrameProcessor.runWithSegment(ScanQueryFrameProcessor.java:181)
	at org.apache.druid.msq.querykit.BaseLeafFrameProcessor.runIncrementally(BaseLeafFrameProcessor.java:159)
	at org.apache.druid.msq.querykit.scan.ScanQueryFrameProcessor.runIncrementally(ScanQueryFrameProcessor.java:146)
	at org.apache.druid.frame.processor.FrameProcessors$1FrameProcessorWithBaggage.runIncrementally(FrameProcessors.java:75)
	at org.apache.druid.frame.processor.FrameProcessorExecutor$1ExecutorRunnable.runProcessorNow(FrameProcessorExecutor.java:229)
	at org.apache.druid.frame.processor.FrameProcessorExecutor$1ExecutorRunnable.run(FrameProcessorExecutor.java:137)
	at org.apache.druid.msq.exec.WorkerImpl$1$2.run(WorkerImpl.java:837)
	at java.base/java.util.concurrent.Executors$RunnableAdapter.call(Executors.java:515)
	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
	at org.apache.druid.query.PrioritizedListenableFutureTask.run(PrioritizedExecutorService.java:251)
	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1128)
	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:628)
	at java.base/java.lang.Thread.run(Thread.java:829)
Caused by: com.fasterxml.jackson.databind.exc.MismatchedInputException: No content to map due to end-of-input
 at [Source: (String)\\"\\"; line: 1, column: 0]
	at com.fasterxml.jackson.databind.exc.MismatchedInputException.from(MismatchedInputException.java:59)
	at com.fasterxml.jackson.databind.ObjectMapper._initForReading(ObjectMapper.java:4360)
	at com.fasterxml.jackson.databind.ObjectMapper._readMapAndClose(ObjectMapper.java:4205)
	at com.fasterxml.jackson.databind.ObjectMapper.readValue(ObjectMapper.java:3214)
	at com.fasterxml.jackson.databind.ObjectMapper.readValue(ObjectMapper.java:3182)
	at org.apache.druid.data.input.impl.JsonLineReader.parseInputRows(JsonLineReader.java:75)
	at org.apache.druid.data.input.impl.JsonLineReader.parseInputRows(JsonLineReader.java:48)
	at org.apache.druid.data.input.IntermediateRowParsingReader$1.hasNext(IntermediateRowParsingReader.java:71)
	... 23 more
",
              "host": "localhost:8101",
              "stageNumber": 0,
              "taskId": "query-af8a263d-213f-418e-ad8d-37d55beff59b-worker0_0",
            },
          ],
        }
      }
    />
    <Memo(ExecutionStagesPane)
      execution={
        Execution {
          "_payload": Object {
            "payload": Object {
              "context": Object {
                "forceTimeChunkLock": true,
                "useLineageBasedSegmentAllocation": true,
              },
              "dataSource": "kttm-blank-lines",
              "groupId": "query-af8a263d-213f-418e-ad8d-37d55beff59b",
              "id": "query-af8a263d-213f-418e-ad8d-37d55beff59b",
              "nativeTypeNames": Array [
                "LONG",
                "STRING",
              ],
              "resource": Object {
                "availabilityGroup": "query-af8a263d-213f-418e-ad8d-37d55beff59b",
                "requiredCapacity": 1,
              },
              "spec": Object {
                "assignmentStrategy": "max",
                "columnMappings": Array [
                  Object {
                    "outputColumn": "__time",
                    "queryColumn": "v0",
                  },
                  Object {
                    "outputColumn": "agent_type",
                    "queryColumn": "agent_type",
                  },
                ],
                "destination": Object {
                  "dataSource": "kttm-blank-lines",
                  "replaceTimeChunks": Array [
                    "-146136543-09-08T08:23:32.096Z/146140482-04-24T15:36:27.903Z",
                  ],
                  "segmentGranularity": "DAY",
                  "type": "dataSource",
                },
                "query": Object {
                  "columns": Array [
                    "agent_type",
                    "v0",
                  ],
                  "context": Object {
                    "__user": "allowAll",
                    "executionMode": "async",
                    "finalize": false,
                    "finalizeAggregations": false,
                    "groupByEnableMultiValueUnnesting": false,
                    "maxNumTasks": 2,
                    "maxParseExceptions": 2,
                    "queryId": "af8a263d-213f-418e-ad8d-37d55beff59b",
                    "scanSignature": "[{\\"name\\":\\"agent_type\\",\\"type\\":\\"STRING\\"},{\\"name\\":\\"v0\\",\\"type\\":\\"LONG\\"}]",
                    "sqlInsertSegmentGranularity": "\\"DAY\\"",
                    "sqlQueryId": "af8a263d-213f-418e-ad8d-37d55beff59b",
                    "sqlReplaceTimeChunks": "all",
                  },
                  "dataSource": Object {
                    "inputFormat": Object {
                      "assumeNewlineDelimited": false,
                      "keepNullColumns": false,
                      "type": "json",
                      "useJsonNodeReader": false,
                    },
                    "inputSource": Object {
                      "type": "http",
                      "uris": Array [
                        "https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json",
                      ],
                    },
                    "signature": Array [
                      Object {
                        "name": "timestamp",
                        "type": "STRING",
                      },
                      Object {
                        "name": "agent_type",
                        "type": "STRING",
                      },
                    ],
                    "type": "external",
                  },
                  "granularity": Object {
                    "type": "all",
                  },
                  "intervals": Object {
                    "intervals": Array [
                      "-146136543-09-08T08:23:32.096Z/146140482-04-24T15:36:27.903Z",
                    ],
                    "type": "intervals",
                  },
                  "legacy": false,
                  "queryType": "scan",
                  "resultFormat": "compactedList",
                  "virtualColumns": Array [
                    Object {
                      "expression": "timestamp_parse(\\"timestamp\\",null,'UTC')",
                      "name": "v0",
                      "outputType": "LONG",
                      "type": "expression",
                    },
                  ],
                },
                "tuningConfig": Object {
                  "maxNumWorkers": 1,
                  "maxRowsInMemory": 100000,
                  "rowsPerSegment": 3000000,
                },
              },
              "sqlQuery": "REPLACE INTO \\"kttm-blank-lines\\" OVERWRITE ALL
SELECT
  TIME_PARSE(\\"timestamp\\") AS \\"__time\\",
  \\"agent_type\\"
FROM TABLE(
  EXTERN(
    '{\\"type\\":\\"http\\",\\"uris\\":[\\"https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json\\"]}',
    '{\\"type\\":\\"json\\"}'
  )
) EXTEND (\\"timestamp\\" VARCHAR, \\"agent_type\\" VARCHAR)
PARTITIONED BY DAY",
              "sqlQueryContext": Object {
                "executionMode": "async",
                "finalizeAggregations": false,
                "groupByEnableMultiValueUnnesting": false,
                "maxNumTasks": 2,
                "maxParseExceptions": 2,
                "queryId": "af8a263d-213f-418e-ad8d-37d55beff59b",
                "sqlInsertSegmentGranularity": "\\"DAY\\"",
                "sqlQueryId": "af8a263d-213f-418e-ad8d-37d55beff59b",
                "sqlReplaceTimeChunks": "all",
              },
              "sqlResultsContext": Object {
                "serializeComplexValues": true,
                "stringifyArrays": true,
                "timeZone": "UTC",
              },
              "sqlTypeNames": Array [
                "TIMESTAMP",
                "VARCHAR",
              ],
              "type": "query_controller",
            },
            "task": "query-af8a263d-213f-418e-ad8d-37d55beff59b",
          },
          "capacityInfo": undefined,
          "destination": Object {
            "dataSource": "kttm-blank-lines",
            "replaceTimeChunks": Array [
              "-146136543-09-08T08:23:32.096Z/146140482-04-24T15:36:27.903Z",
            ],
            "segmentGranularity": "DAY",
            "type": "dataSource",
          },
          "destinationPages": undefined,
          "duration": 14545,
          "engine": "sql-msq-task",
          "error": Object {
            "error": Object {
              "errorCode": "TooManyWarnings",
              "errorMessage": "Too many warnings of type CannotParseExternalData generated (max = 2)",
              "maxWarnings": 2,
              "rootErrorCode": "CannotParseExternalData",
            },
            "host": "localhost",
            "taskId": "query-af8a263d-213f-418e-ad8d-37d55beff59b-worker0_0",
          },
          "id": "query-af8a263d-213f-418e-ad8d-37d55beff59b",
          "nativeQuery": Object {
            "columns": Array [
              "agent_type",
              "v0",
            ],
            "context": Object {
              "__user": "allowAll",
              "executionMode": "async",
              "finalize": false,
              "finalizeAggregations": false,
              "groupByEnableMultiValueUnnesting": false,
              "maxNumTasks": 2,
              "maxParseExceptions": 2,
              "queryId": "af8a263d-213f-418e-ad8d-37d55beff59b",
              "scanSignature": "[{\\"name\\":\\"agent_type\\",\\"type\\":\\"STRING\\"},{\\"name\\":\\"v0\\",\\"type\\":\\"LONG\\"}]",
              "sqlInsertSegmentGranularity": "\\"DAY\\"",
              "sqlQueryId": "af8a263d-213f-418e-ad8d-37d55beff59b",
              "sqlReplaceTimeChunks": "all",
            },
            "dataSource": Object {
              "inputFormat": Object {
                "assumeNewlineDelimited": false,
                "keepNullColumns": false,
                "type": "json",
                "useJsonNodeReader": false,
              },
              "inputSource": Object {
                "type": "http",
                "uris": Array [
                  "https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json",
                ],
              },
              "signature": Array [
                Object {
                  "name": "timestamp",
                  "type": "STRING",
                },
                Object {
                  "name": "agent_type",
                  "type": "STRING",
                },
              ],
              "type": "external",
            },
            "granularity": Object {
              "type": "all",
            },
            "intervals": Object {
              "intervals": Array [
                "-146136543-09-08T08:23:32.096Z/146140482-04-24T15:36:27.903Z",
              ],
              "type": "intervals",
            },
            "legacy": false,
            "queryType": "scan",
            "resultFormat": "compactedList",
            "virtualColumns": Array [
              Object {
                "expression": "timestamp_parse(\\"timestamp\\",null,'UTC')",
                "name": "v0",
                "outputType": "LONG",
                "type": "expression",
              },
            ],
          },
          "queryContext": Object {
            "executionMode": "async",
            "finalizeAggregations": false,
            "groupByEnableMultiValueUnnesting": false,
            "maxNumTasks": 2,
            "maxParseExceptions": 2,
          },
          "result": undefined,
          "sqlQuery": "REPLACE INTO \\"kttm-blank-lines\\" OVERWRITE ALL
SELECT
  TIME_PARSE(\\"timestamp\\") AS \\"__time\\",
  \\"agent_type\\"
FROM TABLE(
  EXTERN(
    '{\\"type\\":\\"http\\",\\"uris\\":[\\"https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json\\"]}',
    '{\\"type\\":\\"json\\"}'
  )
) EXTEND (\\"timestamp\\" VARCHAR, \\"agent_type\\" VARCHAR)
PARTITIONED BY DAY",
          "stages": Stages {
            "counters": Object {
              "0": Object {
                "0": Object {
                  "input0": Object {
                    "bytes": Array [
                      7658,
                    ],
                    "files": Array [
                      1,
                    ],
                    "rows": Array [
                      10,
                    ],
                    "totalFiles": Array [
                      1,
                    ],
                    "type": "channel",
                  },
                  "output": Object {
                    "bytes": Array [
                      712,
                    ],
                    "frames": Array [
                      1,
                    ],
                    "rows": Array [
                      10,
                    ],
                    "type": "channel",
                  },
                  "sortProgress": Object {
                    "levelToMergedBatches": Object {},
                    "levelToTotalBatches": Object {
                      "0": 1,
                      "1": 1,
                      "2": -1,
                    },
                    "progressDigest": 0,
                    "totalMergersForUltimateLevel": -1,
                    "totalMergingLevels": 3,
                    "type": "sortProgress",
                  },
                  "warnings": Object {
                    "CannotParseExternalData": 3,
                    "type": "warnings",
                  },
                },
              },
            },
            "stages": Array [
              Object {
                "definition": Object {
                  "id": "f635e36d-6b90-4b74-ad5e-a179c99f0ddc_0",
                  "input": Array [
                    Object {
                      "inputFormat": Object {
                        "assumeNewlineDelimited": false,
                        "keepNullColumns": false,
                        "type": "json",
                        "useJsonNodeReader": false,
                      },
                      "inputSource": Object {
                        "type": "http",
                        "uris": Array [
                          "https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json",
                        ],
                      },
                      "signature": Array [
                        Object {
                          "name": "timestamp",
                          "type": "STRING",
                        },
                        Object {
                          "name": "agent_type",
                          "type": "STRING",
                        },
                      ],
                      "type": "external",
                    },
                  ],
                  "maxWorkerCount": 1,
                  "processor": Object {
                    "query": Object {
                      "columns": Array [
                        "agent_type",
                        "v0",
                      ],
                      "context": Object {
                        "__timeColumn": "v0",
                        "__user": "allowAll",
                        "executionMode": "async",
                        "finalize": false,
                        "finalizeAggregations": false,
                        "groupByEnableMultiValueUnnesting": false,
                        "maxNumTasks": 2,
                        "maxParseExceptions": 2,
                        "queryId": "af8a263d-213f-418e-ad8d-37d55beff59b",
                        "scanSignature": "[{\\"name\\":\\"agent_type\\",\\"type\\":\\"STRING\\"},{\\"name\\":\\"v0\\",\\"type\\":\\"LONG\\"}]",
                        "sqlInsertSegmentGranularity": "\\"DAY\\"",
                        "sqlQueryId": "af8a263d-213f-418e-ad8d-37d55beff59b",
                        "sqlReplaceTimeChunks": "all",
                      },
                      "dataSource": Object {
                        "inputFormat": Object {
                          "assumeNewlineDelimited": false,
                          "keepNullColumns": false,
                          "type": "json",
                          "useJsonNodeReader": false,
                        },
                        "inputSource": Object {
                          "type": "http",
                          "uris": Array [
                            "https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json",
                          ],
                        },
                        "signature": Array [
                          Object {
                            "name": "timestamp",
                            "type": "STRING",
                          },
                          Object {
                            "name": "agent_type",
                            "type": "STRING",
                          },
                        ],
                        "type": "external",
                      },
                      "granularity": Object {
                        "type": "all",
                      },
                      "intervals": Object {
                        "intervals": Array [
                          "-146136543-09-08T08:23:32.096Z/146140482-04-24T15:36:27.903Z",
                        ],
                        "type": "intervals",
                      },
                      "legacy": false,
                      "queryType": "scan",
                      "resultFormat": "compactedList",
                      "virtualColumns": Array [
                        Object {
                          "expression": "timestamp_parse(\\"timestamp\\",null,'UTC')",
                          "name": "v0",
                          "outputType": "LONG",
                          "type": "expression",
                        },
                      ],
                    },
                    "type": "scan",
                  },
                  "shuffleCheckHasMultipleValues": true,
                  "shuffleSpec": Object {
                    "clusterBy": Object {
                      "bucketByCount": 1,
                      "columns": Array [
                        Object {
                          "columnName": "__bucket",
                          "order": "ASCENDING",
                        },
                        Object {
                          "columnName": "__boost",
                          "order": "ASCENDING",
                        },
                      ],
                    },
                    "targetSize": 3000000,
                    "type": "targetSize",
                  },
                  "signature": Array [
                    Object {
                      "name": "__bucket",
                      "type": "LONG",
                    },
                    Object {
                      "name": "__boost",
                      "type": "LONG",
                    },
                    Object {
                      "name": "agent_type",
                      "type": "STRING",
                    },
                    Object {
                      "name": "v0",
                      "type": "LONG",
                    },
                  ],
                },
                "duration": 14193,
                "phase": "FAILED",
                "sort": true,
                "stageNumber": 0,
                "startTime": "2023-08-01T04:20:25.296Z",
                "workerCount": 1,
              },
              Object {
                "definition": Object {
                  "id": "f635e36d-6b90-4b74-ad5e-a179c99f0ddc_1",
                  "input": Array [
                    Object {
                      "stage": 0,
                      "type": "stage",
                    },
                  ],
                  "maxWorkerCount": 1,
                  "processor": Object {
                    "columnMappings": Array [
                      Object {
                        "outputColumn": "__time",
                        "queryColumn": "v0",
                      },
                      Object {
                        "outputColumn": "agent_type",
                        "queryColumn": "agent_type",
                      },
                    ],
                    "dataSchema": Object {
                      "dataSource": "kttm-blank-lines",
                      "dimensionsSpec": Object {
                        "dimensionExclusions": Array [
                          "__time",
                        ],
                        "dimensions": Array [
                          Object {
                            "createBitmapIndex": true,
                            "multiValueHandling": "SORTED_ARRAY",
                            "name": "agent_type",
                            "type": "string",
                          },
                        ],
                        "includeAllDimensions": false,
                        "useSchemaDiscovery": false,
                      },
                      "granularitySpec": Object {
                        "intervals": Array [
                          "-146136543-09-08T08:23:32.096Z/146140482-04-24T15:36:27.903Z",
                        ],
                        "queryGranularity": Object {
                          "type": "none",
                        },
                        "rollup": false,
                        "type": "arbitrary",
                      },
                      "metricsSpec": Array [],
                      "timestampSpec": Object {
                        "column": "__time",
                        "format": "millis",
                        "missingValue": null,
                      },
                      "transformSpec": Object {
                        "filter": null,
                        "transforms": Array [],
                      },
                    },
                    "tuningConfig": Object {
                      "maxNumWorkers": 1,
                      "maxRowsInMemory": 100000,
                      "rowsPerSegment": 3000000,
                    },
                    "type": "segmentGenerator",
                  },
                  "signature": Array [],
                },
                "stageNumber": 1,
              },
            ],
          },
          "startTime": 2023-08-01T04:20:24.945Z,
          "status": "FAILED",
          "usageInfo": Object {
            "pendingTasks": 0,
            "runningTasks": 2,
          },
          "warnings": Array [
            Object {
              "error": Object {
                "errorCode": "CannotParseExternalData",
                "errorMessage": "Unable to parse row [] (Path: https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json, Record: 3, Line: 3)",
              },
              "exceptionStackTrace": "org.apache.druid.java.util.common.parsers.ParseException: Unable to parse row [] (Path: https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json, Record: 3, Line: 3)
	at org.apache.druid.data.input.IntermediateRowParsingReader$1.hasNext(IntermediateRowParsingReader.java:79)
	at org.apache.druid.java.util.common.parsers.CloseableIterator$2.findNextIteratorIfNecessary(CloseableIterator.java:74)
	at org.apache.druid.java.util.common.parsers.CloseableIterator$2.next(CloseableIterator.java:108)
	at org.apache.druid.java.util.common.parsers.CloseableIterator$1.next(CloseableIterator.java:52)
	at org.apache.druid.msq.input.external.ExternalSegment$1$1.hasNext(ExternalSegment.java:95)
	at org.apache.druid.java.util.common.guava.BaseSequence$1.next(BaseSequence.java:115)
	at org.apache.druid.segment.RowWalker.advance(RowWalker.java:70)
	at org.apache.druid.segment.RowBasedCursor.advanceUninterruptibly(RowBasedCursor.java:110)
	at org.apache.druid.segment.RowBasedCursor.advance(RowBasedCursor.java:103)
	at org.apache.druid.msq.querykit.scan.ScanQueryFrameProcessor.populateFrameWriterAndFlushIfNeeded(ScanQueryFrameProcessor.java:275)
	at org.apache.druid.msq.querykit.scan.ScanQueryFrameProcessor.populateFrameWriterAndFlushIfNeededWithExceptionHandling(ScanQueryFrameProcessor.java:242)
	at org.apache.druid.msq.querykit.scan.ScanQueryFrameProcessor.runWithSegment(ScanQueryFrameProcessor.java:181)
	at org.apache.druid.msq.querykit.BaseLeafFrameProcessor.runIncrementally(BaseLeafFrameProcessor.java:159)
	at org.apache.druid.msq.querykit.scan.ScanQueryFrameProcessor.runIncrementally(ScanQueryFrameProcessor.java:146)
	at org.apache.druid.frame.processor.FrameProcessors$1FrameProcessorWithBaggage.runIncrementally(FrameProcessors.java:75)
	at org.apache.druid.frame.processor.FrameProcessorExecutor$1ExecutorRunnable.runProcessorNow(FrameProcessorExecutor.java:229)
	at org.apache.druid.frame.processor.FrameProcessorExecutor$1ExecutorRunnable.run(FrameProcessorExecutor.java:137)
	at org.apache.druid.msq.exec.WorkerImpl$1$2.run(WorkerImpl.java:837)
	at java.base/java.util.concurrent.Executors$RunnableAdapter.call(Executors.java:515)
	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
	at org.apache.druid.query.PrioritizedListenableFutureTask.run(PrioritizedExecutorService.java:251)
	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1128)
	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:628)
	at java.base/java.lang.Thread.run(Thread.java:829)
Caused by: com.fasterxml.jackson.databind.exc.MismatchedInputException: No content to map due to end-of-input
 at [Source: (String)\\"\\"; line: 1, column: 0]
	at com.fasterxml.jackson.databind.exc.MismatchedInputException.from(MismatchedInputException.java:59)
	at com.fasterxml.jackson.databind.ObjectMapper._initForReading(ObjectMapper.java:4360)
	at com.fasterxml.jackson.databind.ObjectMapper._readMapAndClose(ObjectMapper.java:4205)
	at com.fasterxml.jackson.databind.ObjectMapper.readValue(ObjectMapper.java:3214)
	at com.fasterxml.jackson.databind.ObjectMapper.readValue(ObjectMapper.java:3182)
	at org.apache.druid.data.input.impl.JsonLineReader.parseInputRows(JsonLineReader.java:75)
	at org.apache.druid.data.input.impl.JsonLineReader.parseInputRows(JsonLineReader.java:48)
	at org.apache.druid.data.input.IntermediateRowParsingReader$1.hasNext(IntermediateRowParsingReader.java:71)
	... 23 more
",
              "host": "localhost:8101",
              "stageNumber": 0,
              "taskId": "query-af8a263d-213f-418e-ad8d-37d55beff59b-worker0_0",
            },
            Object {
              "error": Object {
                "errorCode": "CannotParseExternalData",
                "errorMessage": "Unable to parse row [] (Path: https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json, Record: 6, Line: 7)",
              },
              "exceptionStackTrace": "org.apache.druid.java.util.common.parsers.ParseException: Unable to parse row [] (Path: https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json, Record: 6, Line: 7)
	at org.apache.druid.data.input.IntermediateRowParsingReader$1.hasNext(IntermediateRowParsingReader.java:79)
	at org.apache.druid.java.util.common.parsers.CloseableIterator$2.findNextIteratorIfNecessary(CloseableIterator.java:74)
	at org.apache.druid.java.util.common.parsers.CloseableIterator$2.next(CloseableIterator.java:108)
	at org.apache.druid.java.util.common.parsers.CloseableIterator$1.next(CloseableIterator.java:52)
	at org.apache.druid.msq.input.external.ExternalSegment$1$1.hasNext(ExternalSegment.java:95)
	at org.apache.druid.java.util.common.guava.BaseSequence$1.next(BaseSequence.java:115)
	at org.apache.druid.segment.RowWalker.advance(RowWalker.java:70)
	at org.apache.druid.segment.RowBasedCursor.advanceUninterruptibly(RowBasedCursor.java:110)
	at org.apache.druid.segment.RowBasedCursor.advance(RowBasedCursor.java:103)
	at org.apache.druid.msq.querykit.scan.ScanQueryFrameProcessor.populateFrameWriterAndFlushIfNeeded(ScanQueryFrameProcessor.java:275)
	at org.apache.druid.msq.querykit.scan.ScanQueryFrameProcessor.populateFrameWriterAndFlushIfNeededWithExceptionHandling(ScanQueryFrameProcessor.java:242)
	at org.apache.druid.msq.querykit.scan.ScanQueryFrameProcessor.runWithSegment(ScanQueryFrameProcessor.java:181)
	at org.apache.druid.msq.querykit.BaseLeafFrameProcessor.runIncrementally(BaseLeafFrameProcessor.java:159)
	at org.apache.druid.msq.querykit.scan.ScanQueryFrameProcessor.runIncrementally(ScanQueryFrameProcessor.java:146)
	at org.apache.druid.frame.processor.FrameProcessors$1FrameProcessorWithBaggage.runIncrementally(FrameProcessors.java:75)
	at org.apache.druid.frame.processor.FrameProcessorExecutor$1ExecutorRunnable.runProcessorNow(FrameProcessorExecutor.java:229)
	at org.apache.druid.frame.processor.FrameProcessorExecutor$1ExecutorRunnable.run(FrameProcessorExecutor.java:137)
	at org.apache.druid.msq.exec.WorkerImpl$1$2.run(WorkerImpl.java:837)
	at java.base/java.util.concurrent.Executors$RunnableAdapter.call(Executors.java:515)
	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
	at org.apache.druid.query.PrioritizedListenableFutureTask.run(PrioritizedExecutorService.java:251)
	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1128)
	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:628)
	at java.base/java.lang.Thread.run(Thread.java:829)
Caused by: com.fasterxml.jackson.databind.exc.MismatchedInputException: No content to map due to end-of-input
 at [Source: (String)\\"\\"; line: 1, column: 0]
	at com.fasterxml.jackson.databind.exc.MismatchedInputException.from(MismatchedInputException.java:59)
	at com.fasterxml.jackson.databind.ObjectMapper._initForReading(ObjectMapper.java:4360)
	at com.fasterxml.jackson.databind.ObjectMapper._readMapAndClose(ObjectMapper.java:4205)
	at com.fasterxml.jackson.databind.ObjectMapper.readValue(ObjectMapper.java:3214)
	at com.fasterxml.jackson.databind.ObjectMapper.readValue(ObjectMapper.java:3182)
	at org.apache.druid.data.input.impl.JsonLineReader.parseInputRows(JsonLineReader.java:75)
	at org.apache.druid.data.input.impl.JsonLineReader.parseInputRows(JsonLineReader.java:48)
	at org.apache.druid.data.input.IntermediateRowParsingReader$1.hasNext(IntermediateRowParsingReader.java:71)
	... 23 more
",
              "host": "localhost:8101",
              "stageNumber": 0,
              "taskId": "query-af8a263d-213f-418e-ad8d-37d55beff59b-worker0_0",
            },
          ],
        }
      }
      goToTask={[Function]}
      onErrorClick={[Function]}
      onWarningClick={[Function]}
    />
  </div>
</Memo(FancyTabPane)>
`;

exports[`ExecutionDetailsPane matches snapshot with init tab 1`] = `
<Memo(FancyTabPane)
  activeTab="warnings"
  className="execution-details-pane"
  onActivateTab={[Function]}
  tabs={
    Array [
      Object {
        "icon": "many-to-one",
        "id": "general",
        "label": "General",
      },
      Object {
        "icon": "application",
        "id": "sql",
        "label": "SQL query",
      },
      Object {
        "icon": "cog",
        "id": "native",
        "label": "Native query",
      },
      undefined,
      undefined,
      Object {
        "icon": "error",
        "id": "error",
        "label": "Error",
      },
      Object {
        "icon": "warning-sign",
        "id": "warnings",
        "label": "Warnings",
      },
    ]
  }
>
  <Memo(ExecutionWarningsPane)
    execution={
      Execution {
        "_payload": Object {
          "payload": Object {
            "context": Object {
              "forceTimeChunkLock": true,
              "useLineageBasedSegmentAllocation": true,
            },
            "dataSource": "kttm-blank-lines",
            "groupId": "query-af8a263d-213f-418e-ad8d-37d55beff59b",
            "id": "query-af8a263d-213f-418e-ad8d-37d55beff59b",
            "nativeTypeNames": Array [
              "LONG",
              "STRING",
            ],
            "resource": Object {
              "availabilityGroup": "query-af8a263d-213f-418e-ad8d-37d55beff59b",
              "requiredCapacity": 1,
            },
            "spec": Object {
              "assignmentStrategy": "max",
              "columnMappings": Array [
                Object {
                  "outputColumn": "__time",
                  "queryColumn": "v0",
                },
                Object {
                  "outputColumn": "agent_type",
                  "queryColumn": "agent_type",
                },
              ],
              "destination": Object {
                "dataSource": "kttm-blank-lines",
                "replaceTimeChunks": Array [
                  "-146136543-09-08T08:23:32.096Z/146140482-04-24T15:36:27.903Z",
                ],
                "segmentGranularity": "DAY",
                "type": "dataSource",
              },
              "query": Object {
                "columns": Array [
                  "agent_type",
                  "v0",
                ],
                "context": Object {
                  "__user": "allowAll",
                  "executionMode": "async",
                  "finalize": false,
                  "finalizeAggregations": false,
                  "groupByEnableMultiValueUnnesting": false,
                  "maxNumTasks": 2,
                  "maxParseExceptions": 2,
                  "queryId": "af8a263d-213f-418e-ad8d-37d55beff59b",
                  "scanSignature": "[{\\"name\\":\\"agent_type\\",\\"type\\":\\"STRING\\"},{\\"name\\":\\"v0\\",\\"type\\":\\"LONG\\"}]",
                  "sqlInsertSegmentGranularity": "\\"DAY\\"",
                  "sqlQueryId": "af8a263d-213f-418e-ad8d-37d55beff59b",
                  "sqlReplaceTimeChunks": "all",
                },
                "dataSource": Object {
                  "inputFormat": Object {
                    "assumeNewlineDelimited": false,
                    "keepNullColumns": false,
                    "type": "json",
                    "useJsonNodeReader": false,
                  },
                  "inputSource": Object {
                    "type": "http",
                    "uris": Array [
                      "https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json",
                    ],
                  },
                  "signature": Array [
                    Object {
                      "name": "timestamp",
                      "type": "STRING",
                    },
                    Object {
                      "name": "agent_type",
                      "type": "STRING",
                    },
                  ],
                  "type": "external",
                },
                "granularity": Object {
                  "type": "all",
                },
                "intervals": Object {
                  "intervals": Array [
                    "-146136543-09-08T08:23:32.096Z/146140482-04-24T15:36:27.903Z",
                  ],
                  "type": "intervals",
                },
                "legacy": false,
                "queryType": "scan",
                "resultFormat": "compactedList",
                "virtualColumns": Array [
                  Object {
                    "expression": "timestamp_parse(\\"timestamp\\",null,'UTC')",
                    "name": "v0",
                    "outputType": "LONG",
                    "type": "expression",
                  },
                ],
              },
              "tuningConfig": Object {
                "maxNumWorkers": 1,
                "maxRowsInMemory": 100000,
                "rowsPerSegment": 3000000,
              },
            },
            "sqlQuery": "REPLACE INTO \\"kttm-blank-lines\\" OVERWRITE ALL
SELECT
  TIME_PARSE(\\"timestamp\\") AS \\"__time\\",
  \\"agent_type\\"
FROM TABLE(
  EXTERN(
    '{\\"type\\":\\"http\\",\\"uris\\":[\\"https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json\\"]}',
    '{\\"type\\":\\"json\\"}'
  )
) EXTEND (\\"timestamp\\" VARCHAR, \\"agent_type\\" VARCHAR)
PARTITIONED BY DAY",
            "sqlQueryContext": Object {
              "executionMode": "async",
              "finalizeAggregations": false,
              "groupByEnableMultiValueUnnesting": false,
              "maxNumTasks": 2,
              "maxParseExceptions": 2,
              "queryId": "af8a263d-213f-418e-ad8d-37d55beff59b",
              "sqlInsertSegmentGranularity": "\\"DAY\\"",
              "sqlQueryId": "af8a263d-213f-418e-ad8d-37d55beff59b",
              "sqlReplaceTimeChunks": "all",
            },
            "sqlResultsContext": Object {
              "serializeComplexValues": true,
              "stringifyArrays": true,
              "timeZone": "UTC",
            },
            "sqlTypeNames": Array [
              "TIMESTAMP",
              "VARCHAR",
            ],
            "type": "query_controller",
          },
          "task": "query-af8a263d-213f-418e-ad8d-37d55beff59b",
        },
        "capacityInfo": undefined,
        "destination": Object {
          "dataSource": "kttm-blank-lines",
          "replaceTimeChunks": Array [
            "-146136543-09-08T08:23:32.096Z/146140482-04-24T15:36:27.903Z",
          ],
          "segmentGranularity": "DAY",
          "type": "dataSource",
        },
        "destinationPages": undefined,
        "duration": 14545,
        "engine": "sql-msq-task",
        "error": Object {
          "error": Object {
            "errorCode": "TooManyWarnings",
            "errorMessage": "Too many warnings of type CannotParseExternalData generated (max = 2)",
            "maxWarnings": 2,
            "rootErrorCode": "CannotParseExternalData",
          },
          "host": "localhost",
          "taskId": "query-af8a263d-213f-418e-ad8d-37d55beff59b-worker0_0",
        },
        "id": "query-af8a263d-213f-418e-ad8d-37d55beff59b",
        "nativeQuery": Object {
          "columns": Array [
            "agent_type",
            "v0",
          ],
          "context": Object {
            "__user": "allowAll",
            "executionMode": "async",
            "finalize": false,
            "finalizeAggregations": false,
            "groupByEnableMultiValueUnnesting": false,
            "maxNumTasks": 2,
            "maxParseExceptions": 2,
            "queryId": "af8a263d-213f-418e-ad8d-37d55beff59b",
            "scanSignature": "[{\\"name\\":\\"agent_type\\",\\"type\\":\\"STRING\\"},{\\"name\\":\\"v0\\",\\"type\\":\\"LONG\\"}]",
            "sqlInsertSegmentGranularity": "\\"DAY\\"",
            "sqlQueryId": "af8a263d-213f-418e-ad8d-37d55beff59b",
            "sqlReplaceTimeChunks": "all",
          },
          "dataSource": Object {
            "inputFormat": Object {
              "assumeNewlineDelimited": false,
              "keepNullColumns": false,
              "type": "json",
              "useJsonNodeReader": false,
            },
            "inputSource": Object {
              "type": "http",
              "uris": Array [
                "https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json",
              ],
            },
            "signature": Array [
              Object {
                "name": "timestamp",
                "type": "STRING",
              },
              Object {
                "name": "agent_type",
                "type": "STRING",
              },
            ],
            "type": "external",
          },
          "granularity": Object {
            "type": "all",
          },
          "intervals": Object {
            "intervals": Array [
              "-146136543-09-08T08:23:32.096Z/146140482-04-24T15:36:27.903Z",
            ],
            "type": "intervals",
          },
          "legacy": false,
          "queryType": "scan",
          "resultFormat": "compactedList",
          "virtualColumns": Array [
            Object {
              "expression": "timestamp_parse(\\"timestamp\\",null,'UTC')",
              "name": "v0",
              "outputType": "LONG",
              "type": "expression",
            },
          ],
        },
        "queryContext": Object {
          "executionMode": "async",
          "finalizeAggregations": false,
          "groupByEnableMultiValueUnnesting": false,
          "maxNumTasks": 2,
          "maxParseExceptions": 2,
        },
        "result": undefined,
        "sqlQuery": "REPLACE INTO \\"kttm-blank-lines\\" OVERWRITE ALL
SELECT
  TIME_PARSE(\\"timestamp\\") AS \\"__time\\",
  \\"agent_type\\"
FROM TABLE(
  EXTERN(
    '{\\"type\\":\\"http\\",\\"uris\\":[\\"https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json\\"]}',
    '{\\"type\\":\\"json\\"}'
  )
) EXTEND (\\"timestamp\\" VARCHAR, \\"agent_type\\" VARCHAR)
PARTITIONED BY DAY",
        "stages": Stages {
          "counters": Object {
            "0": Object {
              "0": Object {
                "input0": Object {
                  "bytes": Array [
                    7658,
                  ],
                  "files": Array [
                    1,
                  ],
                  "rows": Array [
                    10,
                  ],
                  "totalFiles": Array [
                    1,
                  ],
                  "type": "channel",
                },
                "output": Object {
                  "bytes": Array [
                    712,
                  ],
                  "frames": Array [
                    1,
                  ],
                  "rows": Array [
                    10,
                  ],
                  "type": "channel",
                },
                "sortProgress": Object {
                  "levelToMergedBatches": Object {},
                  "levelToTotalBatches": Object {
                    "0": 1,
                    "1": 1,
                    "2": -1,
                  },
                  "progressDigest": 0,
                  "totalMergersForUltimateLevel": -1,
                  "totalMergingLevels": 3,
                  "type": "sortProgress",
                },
                "warnings": Object {
                  "CannotParseExternalData": 3,
                  "type": "warnings",
                },
              },
            },
          },
          "stages": Array [
            Object {
              "definition": Object {
                "id": "f635e36d-6b90-4b74-ad5e-a179c99f0ddc_0",
                "input": Array [
                  Object {
                    "inputFormat": Object {
                      "assumeNewlineDelimited": false,
                      "keepNullColumns": false,
                      "type": "json",
                      "useJsonNodeReader": false,
                    },
                    "inputSource": Object {
                      "type": "http",
                      "uris": Array [
                        "https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json",
                      ],
                    },
                    "signature": Array [
                      Object {
                        "name": "timestamp",
                        "type": "STRING",
                      },
                      Object {
                        "name": "agent_type",
                        "type": "STRING",
                      },
                    ],
                    "type": "external",
                  },
                ],
                "maxWorkerCount": 1,
                "processor": Object {
                  "query": Object {
                    "columns": Array [
                      "agent_type",
                      "v0",
                    ],
                    "context": Object {
                      "__timeColumn": "v0",
                      "__user": "allowAll",
                      "executionMode": "async",
                      "finalize": false,
                      "finalizeAggregations": false,
                      "groupByEnableMultiValueUnnesting": false,
                      "maxNumTasks": 2,
                      "maxParseExceptions": 2,
                      "queryId": "af8a263d-213f-418e-ad8d-37d55beff59b",
                      "scanSignature": "[{\\"name\\":\\"agent_type\\",\\"type\\":\\"STRING\\"},{\\"name\\":\\"v0\\",\\"type\\":\\"LONG\\"}]",
                      "sqlInsertSegmentGranularity": "\\"DAY\\"",
                      "sqlQueryId": "af8a263d-213f-418e-ad8d-37d55beff59b",
                      "sqlReplaceTimeChunks": "all",
                    },
                    "dataSource": Object {
                      "inputFormat": Object {
                        "assumeNewlineDelimited": false,
                        "keepNullColumns": false,
                        "type": "json",
                        "useJsonNodeReader": false,
                      },
                      "inputSource": Object {
                        "type": "http",
                        "uris": Array [
                          "https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json",
                        ],
                      },
                      "signature": Array [
                        Object {
                          "name": "timestamp",
                          "type": "STRING",
                        },
                        Object {
                          "name": "agent_type",
                          "type": "STRING",
                        },
                      ],
                      "type": "external",
                    },
                    "granularity": Object {
                      "type": "all",
                    },
                    "intervals": Object {
                      "intervals": Array [
                        "-146136543-09-08T08:23:32.096Z/146140482-04-24T15:36:27.903Z",
                      ],
                      "type": "intervals",
                    },
                    "legacy": false,
                    "queryType": "scan",
                    "resultFormat": "compactedList",
                    "virtualColumns": Array [
                      Object {
                        "expression": "timestamp_parse(\\"timestamp\\",null,'UTC')",
                        "name": "v0",
                        "outputType": "LONG",
                        "type": "expression",
                      },
                    ],
                  },
                  "type": "scan",
                },
                "shuffleCheckHasMultipleValues": true,
                "shuffleSpec": Object {
                  "clusterBy": Object {
                    "bucketByCount": 1,
                    "columns": Array [
                      Object {
                        "columnName": "__bucket",
                        "order": "ASCENDING",
                      },
                      Object {
                        "columnName": "__boost",
                        "order": "ASCENDING",
                      },
                    ],
                  },
                  "targetSize": 3000000,
                  "type": "targetSize",
                },
                "signature": Array [
                  Object {
                    "name": "__bucket",
                    "type": "LONG",
                  },
                  Object {
                    "name": "__boost",
                    "type": "LONG",
                  },
                  Object {
                    "name": "agent_type",
                    "type": "STRING",
                  },
                  Object {
                    "name": "v0",
                    "type": "LONG",
                  },
                ],
              },
              "duration": 14193,
              "phase": "FAILED",
              "sort": true,
              "stageNumber": 0,
              "startTime": "2023-08-01T04:20:25.296Z",
              "workerCount": 1,
            },
            Object {
              "definition": Object {
                "id": "f635e36d-6b90-4b74-ad5e-a179c99f0ddc_1",
                "input": Array [
                  Object {
                    "stage": 0,
                    "type": "stage",
                  },
                ],
                "maxWorkerCount": 1,
                "processor": Object {
                  "columnMappings": Array [
                    Object {
                      "outputColumn": "__time",
                      "queryColumn": "v0",
                    },
                    Object {
                      "outputColumn": "agent_type",
                      "queryColumn": "agent_type",
                    },
                  ],
                  "dataSchema": Object {
                    "dataSource": "kttm-blank-lines",
                    "dimensionsSpec": Object {
                      "dimensionExclusions": Array [
                        "__time",
                      ],
                      "dimensions": Array [
                        Object {
                          "createBitmapIndex": true,
                          "multiValueHandling": "SORTED_ARRAY",
                          "name": "agent_type",
                          "type": "string",
                        },
                      ],
                      "includeAllDimensions": false,
                      "useSchemaDiscovery": false,
                    },
                    "granularitySpec": Object {
                      "intervals": Array [
                        "-146136543-09-08T08:23:32.096Z/146140482-04-24T15:36:27.903Z",
                      ],
                      "queryGranularity": Object {
                        "type": "none",
                      },
                      "rollup": false,
                      "type": "arbitrary",
                    },
                    "metricsSpec": Array [],
                    "timestampSpec": Object {
                      "column": "__time",
                      "format": "millis",
                      "missingValue": null,
                    },
                    "transformSpec": Object {
                      "filter": null,
                      "transforms": Array [],
                    },
                  },
                  "tuningConfig": Object {
                    "maxNumWorkers": 1,
                    "maxRowsInMemory": 100000,
                    "rowsPerSegment": 3000000,
                  },
                  "type": "segmentGenerator",
                },
                "signature": Array [],
              },
              "stageNumber": 1,
            },
          ],
        },
        "startTime": 2023-08-01T04:20:24.945Z,
        "status": "FAILED",
        "usageInfo": Object {
          "pendingTasks": 0,
          "runningTasks": 2,
        },
        "warnings": Array [
          Object {
            "error": Object {
              "errorCode": "CannotParseExternalData",
              "errorMessage": "Unable to parse row [] (Path: https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json, Record: 3, Line: 3)",
            },
            "exceptionStackTrace": "org.apache.druid.java.util.common.parsers.ParseException: Unable to parse row [] (Path: https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json, Record: 3, Line: 3)
	at org.apache.druid.data.input.IntermediateRowParsingReader$1.hasNext(IntermediateRowParsingReader.java:79)
	at org.apache.druid.java.util.common.parsers.CloseableIterator$2.findNextIteratorIfNecessary(CloseableIterator.java:74)
	at org.apache.druid.java.util.common.parsers.CloseableIterator$2.next(CloseableIterator.java:108)
	at org.apache.druid.java.util.common.parsers.CloseableIterator$1.next(CloseableIterator.java:52)
	at org.apache.druid.msq.input.external.ExternalSegment$1$1.hasNext(ExternalSegment.java:95)
	at org.apache.druid.java.util.common.guava.BaseSequence$1.next(BaseSequence.java:115)
	at org.apache.druid.segment.RowWalker.advance(RowWalker.java:70)
	at org.apache.druid.segment.RowBasedCursor.advanceUninterruptibly(RowBasedCursor.java:110)
	at org.apache.druid.segment.RowBasedCursor.advance(RowBasedCursor.java:103)
	at org.apache.druid.msq.querykit.scan.ScanQueryFrameProcessor.populateFrameWriterAndFlushIfNeeded(ScanQueryFrameProcessor.java:275)
	at org.apache.druid.msq.querykit.scan.ScanQueryFrameProcessor.populateFrameWriterAndFlushIfNeededWithExceptionHandling(ScanQueryFrameProcessor.java:242)
	at org.apache.druid.msq.querykit.scan.ScanQueryFrameProcessor.runWithSegment(ScanQueryFrameProcessor.java:181)
	at org.apache.druid.msq.querykit.BaseLeafFrameProcessor.runIncrementally(BaseLeafFrameProcessor.java:159)
	at org.apache.druid.msq.querykit.scan.ScanQueryFrameProcessor.runIncrementally(ScanQueryFrameProcessor.java:146)
	at org.apache.druid.frame.processor.FrameProcessors$1FrameProcessorWithBaggage.runIncrementally(FrameProcessors.java:75)
	at org.apache.druid.frame.processor.FrameProcessorExecutor$1ExecutorRunnable.runProcessorNow(FrameProcessorExecutor.java:229)
	at org.apache.druid.frame.processor.FrameProcessorExecutor$1ExecutorRunnable.run(FrameProcessorExecutor.java:137)
	at org.apache.druid.msq.exec.WorkerImpl$1$2.run(WorkerImpl.java:837)
	at java.base/java.util.concurrent.Executors$RunnableAdapter.call(Executors.java:515)
	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
	at org.apache.druid.query.PrioritizedListenableFutureTask.run(PrioritizedExecutorService.java:251)
	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1128)
	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:628)
	at java.base/java.lang.Thread.run(Thread.java:829)
Caused by: com.fasterxml.jackson.databind.exc.MismatchedInputException: No content to map due to end-of-input
 at [Source: (String)\\"\\"; line: 1, column: 0]
	at com.fasterxml.jackson.databind.exc.MismatchedInputException.from(MismatchedInputException.java:59)
	at com.fasterxml.jackson.databind.ObjectMapper._initForReading(ObjectMapper.java:4360)
	at com.fasterxml.jackson.databind.ObjectMapper._readMapAndClose(ObjectMapper.java:4205)
	at com.fasterxml.jackson.databind.ObjectMapper.readValue(ObjectMapper.java:3214)
	at com.fasterxml.jackson.databind.ObjectMapper.readValue(ObjectMapper.java:3182)
	at org.apache.druid.data.input.impl.JsonLineReader.parseInputRows(JsonLineReader.java:75)
	at org.apache.druid.data.input.impl.JsonLineReader.parseInputRows(JsonLineReader.java:48)
	at org.apache.druid.data.input.IntermediateRowParsingReader$1.hasNext(IntermediateRowParsingReader.java:71)
	... 23 more
",
            "host": "localhost:8101",
            "stageNumber": 0,
            "taskId": "query-af8a263d-213f-418e-ad8d-37d55beff59b-worker0_0",
          },
          Object {
            "error": Object {
              "errorCode": "CannotParseExternalData",
              "errorMessage": "Unable to parse row [] (Path: https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json, Record: 6, Line: 7)",
            },
            "exceptionStackTrace": "org.apache.druid.java.util.common.parsers.ParseException: Unable to parse row [] (Path: https://static.imply.io/example-data/kttm-with-issues/kttm-blank-lines.json, Record: 6, Line: 7)
	at org.apache.druid.data.input.IntermediateRowParsingReader$1.hasNext(IntermediateRowParsingReader.java:79)
	at org.apache.druid.java.util.common.parsers.CloseableIterator$2.findNextIteratorIfNecessary(CloseableIterator.java:74)
	at org.apache.druid.java.util.common.parsers.CloseableIterator$2.next(CloseableIterator.java:108)
	at org.apache.druid.java.util.common.parsers.CloseableIterator$1.next(CloseableIterator.java:52)
	at org.apache.druid.msq.input.external.ExternalSegment$1$1.hasNext(ExternalSegment.java:95)
	at org.apache.druid.java.util.common.guava.BaseSequence$1.next(BaseSequence.java:115)
	at org.apache.druid.segment.RowWalker.advance(RowWalker.java:70)
	at org.apache.druid.segment.RowBasedCursor.advanceUninterruptibly(RowBasedCursor.java:110)
	at org.apache.druid.segment.RowBasedCursor.advance(RowBasedCursor.java:103)
	at org.apache.druid.msq.querykit.scan.ScanQueryFrameProcessor.populateFrameWriterAndFlushIfNeeded(ScanQueryFrameProcessor.java:275)
	at org.apache.druid.msq.querykit.scan.ScanQueryFrameProcessor.populateFrameWriterAndFlushIfNeededWithExceptionHandling(ScanQueryFrameProcessor.java:242)
	at org.apache.druid.msq.querykit.scan.ScanQueryFrameProcessor.runWithSegment(ScanQueryFrameProcessor.java:181)
	at org.apache.druid.msq.querykit.BaseLeafFrameProcessor.runIncrementally(BaseLeafFrameProcessor.java:159)
	at org.apache.druid.msq.querykit.scan.ScanQueryFrameProcessor.runIncrementally(ScanQueryFrameProcessor.java:146)
	at org.apache.druid.frame.processor.FrameProcessors$1FrameProcessorWithBaggage.runIncrementally(FrameProcessors.java:75)
	at org.apache.druid.frame.processor.FrameProcessorExecutor$1ExecutorRunnable.runProcessorNow(FrameProcessorExecutor.java:229)
	at org.apache.druid.frame.processor.FrameProcessorExecutor$1ExecutorRunnable.run(FrameProcessorExecutor.java:137)
	at org.apache.druid.msq.exec.WorkerImpl$1$2.run(WorkerImpl.java:837)
	at java.base/java.util.concurrent.Executors$RunnableAdapter.call(Executors.java:515)
	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
	at org.apache.druid.query.PrioritizedListenableFutureTask.run(PrioritizedExecutorService.java:251)
	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1128)
	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:628)
	at java.base/java.lang.Thread.run(Thread.java:829)
Caused by: com.fasterxml.jackson.databind.exc.MismatchedInputException: No content to map due to end-of-input
 at [Source: (String)\\"\\"; line: 1, column: 0]
	at com.fasterxml.jackson.databind.exc.MismatchedInputException.from(MismatchedInputException.java:59)
	at com.fasterxml.jackson.databind.ObjectMapper._initForReading(ObjectMapper.java:4360)
	at com.fasterxml.jackson.databind.ObjectMapper._readMapAndClose(ObjectMapper.java:4205)
	at com.fasterxml.jackson.databind.ObjectMapper.readValue(ObjectMapper.java:3214)
	at com.fasterxml.jackson.databind.ObjectMapper.readValue(ObjectMapper.java:3182)
	at org.apache.druid.data.input.impl.JsonLineReader.parseInputRows(JsonLineReader.java:75)
	at org.apache.druid.data.input.impl.JsonLineReader.parseInputRows(JsonLineReader.java:48)
	at org.apache.druid.data.input.IntermediateRowParsingReader$1.hasNext(IntermediateRowParsingReader.java:71)
	... 23 more
",
            "host": "localhost:8101",
            "stageNumber": 0,
            "taskId": "query-af8a263d-213f-418e-ad8d-37d55beff59b-worker0_0",
          },
        ],
      }
    }
  />
</Memo(FancyTabPane)>
`;
